--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,8 @@
-<% content_for :title, "Events & activities in your area" %>
+<% content_for :title, "Events" %>
+<% content_for :image, @site.og_image %>
+<% content_for :description, @site.og_description %>
 
-<%= render_component "hero", title: 'Events & activities in your area',
+<%= render_component "hero", title: 'Events & activities',
                              subtitle: @site.tagline %>
 
 <div class="c c--lg-space-after">
