--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -1,3 +1,19 @@
+<% if current_page?(root_url) && @site&.slug == 'default-site' %>
+  <% title = 'PlaceCal | The Community Calendar' %>
+<% elsif content_for?(:title) && @site&.name %>
+  <% title = yield(:title) + " | " + @site.name %>
+<% elsif content_for?(:title) %>
+  <% title = yield(:title) %>
+<% elsif @site&.name %>
+  <% title = @site.name %>
+<% else %>
+  <% title = 'PlaceCal | The Community Calendar' %>
+<% end %>
+
+<title><%= title %></title>
+<meta property="og:title" content="<%= title %>">
+<meta property="og:site_name" content="<%= @site&.name || 'PlaceCal' %>">
+
 <link rel="icon" type="image/png" href="<%= image_url('favicon.png') %>">
 <link rel="apple-touch-icon" href="<%= image_url('apple-touch-icon.png') %>">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -5,31 +21,24 @@
 <% if content_for?(:description) %>
   <% description = yield(:description) %>
 <% else %>
-  <% description = "#{@site&.name} is a community events calendar where you can find out everything that's happening near you, all in one place." %>
+  <% description = t('meta.description', site: @site&.name ) %>
 <% end %>
 
-<meta property="og:description" content="<%= description %>" />
-<meta name="twitter:description" content="<%= description %>" />
+<meta property="description" content="<%= description %>">
+<meta property="og:description" content="<%= description %>">
 
 <% if content_for?(:image) %>
-  <meta property="og:image" content="<%= yield(:image) %>" />
-  <meta property="og:image:alt" content="<%= yield(:image_alt) %>" />
-  <meta name="twitter:image" content="<%= yield(:image) %>" />
-  <meta name="twitter:image:alt" content="<%= yield(:image_alt) %>" />
+  <meta property="og:image" content="<%= image_url yield(:image) %>">
 <% else %>
-  <meta property="og:image" content="<%= image_url('og/wide.png') %>" />
-  <meta property="og:image:alt" content="PlaceCal logo" />
-  <meta name="twitter:image" content="<%= image_url('og/wide.png') %>" />
-  <meta name="twitter:image:alt" content="PlaceCal logo" />
-  <meta property="og:image:width" content="1920" />
-  <meta property="og:image:height" content="1080" />
+  <meta property="og:image" content="<%= image_url 'og/wide.png' %>">
+  <meta property="og:image:alt" content="PlaceCal logo">
+  <meta property="og:image:width" content="1920">
+  <meta property="og:image:height" content="1080">
 <% end %>
 
-<meta property="og:type" content="website" />
+<meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@PlaceCal" />
-<meta name="twitter:creator" content="@gfscstudio" />
+<meta name="twitter:site" content="@PlaceCal">
+<meta name="twitter:creator" content="@gfscstudio">
 
-<% if content_for?(:permalink) %>
-  <meta property="og:url" content="<%= yield(:permalink) %>">
-<% end %>
+<meta property="og:url" content="<%= request.original_url %>">
