--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -1,5 +1,8 @@
-<% content_for :title, 'Partners in your area' %>
-<%= render_component "hero", title: 'Partners in your area', subtitle: @site.tagline %>
+<% content_for :title, 'Partners' %>
+<% content_for :image, @site.og_image %>
+<% content_for :description, @site.og_description %>
+
+<%= render_component "hero", title: 'Our Partners', subtitle: @site.tagline %>
 
 <div class="c c--lg-space-after">
   <%= render_component "breadcrumb", trail: [['Partners', partners_path]], site_name: @site.name do %>
