--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -1,8 +1,12 @@
 <% content_for :title, @partner.name %>
-<% if @partner.summary %>
-  <% content_for :description, @partner.summary %>
-<% end %>
-<% content_for :permalink, @partner.permalink %>
+<% 
+  if @partner.image
+    content_for :image, @partner.image
+  else
+    content_for :image, @site.og_image
+  end
+%>
+<% content_for :description, @partner.summary if @partner.summary %>
 
 <div vocab="http://schema.org/" typeof="Organization">
 
