--- a/app/views/sites/default.html.erb
+++ b/app/views/sites/default.html.erb
@@ -1,3 +1,5 @@
+<% content_for :image, @site.og_image %>
+<% content_for :description, @site.og_description %>
 
 <%= render(
   HeroSectionComponent.new(
