fix: og conditional not quite accurate

--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, @partner.name %>
 <% 
-  if @partner.image
+  if @partner.image.present?
     content_for :image, @partner.image
   else
     content_for :image, @site.og_image
