fix: overzelous icon font

--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -9,6 +9,7 @@
 @import "base/buttons";
 @import "base/grid";
 @import "base/icon-font";
+@import "base/icons";
 @import "base/image";
 @import "base/layout";
 @import "base/map";
