feat: Add in neighbourhoods and categories as html data

--- a/app/components/partner_preview_component/partner_preview_component.html.erb
+++ b/app/components/partner_preview_component/partner_preview_component.html.erb
@@ -1,4 +1,4 @@
-<li class="preview" data-categories="12">
+<li class="preview" data-categories="<%= data_categories %>" data-neighbourhoods="<%= data_neighbourhoods %>">
   <div class="preview__header">
     <h3><%= link_to @partner.name, @partner %></h3>
     <% if show_neighbourhood? %>
