feat: Refactor category and neighbourhood filters

--- a/app/components/partner_preview_component/partner_preview_component.html.erb
+++ b/app/components/partner_preview_component/partner_preview_component.html.erb
@@ -11,6 +11,8 @@
   <% if @partner.description %>
     <div class="preview__details">
       <%= content_tag :p, @partner.summary %>
+      <%= @partner.categories.map(&:name) %><br>
+      <%= @partner.neighbourhoods.map(&:name) %>
     </div>
   <% end %>
 </li>
