--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -6,26 +6,30 @@
 
 <div class="c c--lg-space-after">
   <%= render_component "breadcrumb", trail: [['Partners', partners_path]], site_name: @site.name do %>
-    <%= render FilterComponent.new(partners: @partners, site: @site) %>
+    <%= turbo_frame_tag "partner_previews_filter" do %>
+      <%= render PartnerFilterComponent.new(partners: @partners, site: @site) %>
+    <% end %>
   <% end %>
 
   <hr>
-  <ul class="partners reset two-col" id="partners">
-    <% @partners.each do |partner| %>
-      <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
-      <%# render_component("place_partner_preview",
-                           previewee: partner,
-                           primary_neighbourhood: @primary_neighbourhood,
-                           service_areas: partner.service_areas,
-                           show_neighbourhoods: @current_site.show_neighbourhoods?,
-                           neighbourhood_name: partner.neighbourhood_name_for_site(@current_site.badge_zoom_level)
-                           ) %>
-    <% end %>
-  </ul>
+  <%= turbo_frame_tag "partner_previews" do %>
+    <ul class="partners reset two-col" id="partners">
+      <% @partners.each do |partner| %>
+        <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
+        <%# render_component("place_partner_preview",
+                            previewee: partner,
+                            primary_neighbourhood: @primary_neighbourhood,
+                            service_areas: partner.service_areas,
+                            show_neighbourhoods: @current_site.show_neighbourhoods?,
+                            neighbourhood_name: partner.neighbourhood_name_for_site(@current_site.badge_zoom_level)
+                            ) %>
+      <% end %>
+    </ul>
+  <% end %>
 </div>
 
 <div id="map">
-  <%= render 'shared/map', points: @map, site: @current_site.slug %>
+  <%# render 'shared/map', points: @map, site: @current_site.slug %>
 </div>
 
-<%#= console %>
+<%= console %>
