--- a/app/components/partner_filter_component/partner_filter_component.html.erb
+++ b/app/components/partner_filter_component/partner_filter_component.html.erb
@@ -4,63 +4,59 @@
               class: 'filters__form' do %>
   <div class ="breadcrumb__element breadcrumb__element--last">
 
-  <%# category filters %>
-  <% if show_category_filter? %>
-    <div class="breadcrumb__filters filters">
-      <div class="js-category-filters-toggle filters__toggle">
-        <a href="#" data-turbo="false"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Category</span></a>
-      </div>
-      <div class="filters__dropdown filters__dropdown--hidden js-category-filters">
-        <div class="filters__group">
-          <% categories.each do |category| %>
-          <div class="filters__option">
-            <%= radio_button_tag 'category', category.id, current_category?(category), class: "tag__button" %>
-            <%= label_tag "category_#{category.id}", category.name, class: "tag__label" %>
+    <%# Category filter %>
+    <% if show_category_filter? %>
+      <div class="breadcrumb__filters filters">
+        <div class="js-category-filters-toggle filters__toggle">
+          <a href="#" data-turbo="false"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Category</span></a>
+        </div>
+        <div class="filters__dropdown filters__dropdown--hidden js-category-filters">
+          <div class="filters__group">
+            <% categories.each do |category| %>
+              <div class="filters__option">
+                <%= radio_button_tag "category", 
+                                      category.id, 
+                                      current_category?(category), 
+                                      data: { action: "partner-filter-component#submitCategory",
+                                              "partner-filter-component-target": "category" },
+                                      class: "tag__button" %>
+                <%= label_tag "category_#{category.id}", category.name, class: "tag__label" %>
+              </div>
+            <% end %>
           </div>
+          <%# if category_active? %>
+            <hr>
+            <a href=<%= request.original_url %> class="btn size-patch" role="button">Reset</a>
+          <%# end %>
+        </div>
+      </div>
+    <% end %>
+
+    <%# Neighbourhood filter %>
+    <div class="breadcrumb__filters filters">
+      <div class="js-neighbourhood-filters-toggle filters__toggle">
+        <a href="#" data-turbo="false"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Neighbourhood</span></a>
+      </div>
+      <div class="filters__dropdown filters__dropdown--hidden js-neighbourhood-filters">
+        <div class="filters__group">
+          <% neighbourhoods.each do |neighbourhood| %>
+            <div class="filters__option">
+              <%= radio_button_tag "neighbourhood",
+                                    neighbourhood.id, 
+                                    neighbourhood.name, 
+                                    data: { action: "partner-filter-component#submitNeighbourhood",
+                                            "partner-filter-component-target": "neighbourhood" },
+                                    class: "tag__button" %>
+              <%= label_tag "neighbourhood_#{neighbourhood.id}", neighbourhood.name, class: "tag__label" %>
+            </div>
           <% end %>
         </div>
-        <hr>
-        <div class="filters__group">
-          <div class="filters__option">
-            <%= radio_button_tag 'category_mode', 'include', include_mode?, class: "include__button" %>
-            <%= label_tag 'category_mode', 'Include', class: "include__label" %>
-          </div>
-          <div class="filters__option">
-            <%= radio_button_tag 'category_mode', 'exclude', exclude_mode?, class: "include__button" %>
-            <%= label_tag 'category_mode', 'Exclude', class: "include__label" %>
-          </div>
-        </div>
-        <hr>
-        <%# if category_active? %>
+        <% # if neighbourhood_active? %>
+          <hr>
           <a href=<%= request.original_url %> class="btn size-patch" role="button">Reset</a>
-        <%# end %>
-        <%= button_tag 'Filter', name: nil, class: 'btn size-patch' %>
+        <% # end %>
       </div>
     </div>
-  <% end %>
-
-  <%# neighbourhood filters %>
-  <div class="breadcrumb__filters filters">
-    <div class="js-neighbourhood-filters-toggle filters__toggle">
-      <a href="#" data-turbo="false"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Neighbourhood</span></a>
-    </div>
-    <div class="filters__dropdown filters__dropdown--hidden js-neighbourhood-filters">
-      <div class="filters__group">
-        <% neighbourhoods.each do |neighbourhood| %>
-          <div class="filters__option">
-            <%= radio_button_tag "neighbourhood", neighbourhood.id, neighbourhood.name, class: "tag__button" %>
-            <%= label_tag "neighbourhood_#{neighbourhood.id}", neighbourhood.name, class: "tag__label" %>
-          </div>
-        <% end %>
-      </div>
-      <hr>
-      <% # if neighbourhood_active? %>
-        <a href=<%= request.original_url %> class="btn size-patch" role="button">Reset</a>
-      <% # end %>
-      
-      <%= button_tag 'Filter', name: nil, class: 'btn size-patch' %>
-    </div>
-  </div>
 
   </div>
 <% end %>
