--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -7,7 +7,10 @@
 <div class="c c--lg-space-after">
   <%= render_component "breadcrumb", trail: [['Partners', partners_path]], site_name: @site.name do %>
     <%= turbo_frame_tag "partner_previews_filter" do %>
-      <%= render PartnerFilterComponent.new(partners: @partners, site: @site) %>
+      <%= render PartnerFilterComponent.new(partners: @partners, 
+                                            site: @site,
+                                            selected_category: @selected_category, 
+                                            selected_neighbourhood: @selected_neighbourhood) %>
     <% end %>
   <% end %>
 
