--- a/app/components/breadcrumb/breadcrumb.scss
+++ b/app/components/breadcrumb/breadcrumb.scss
@@ -10,7 +10,7 @@
 
 	.btn {
 		border-bottom-color: var(--base-primary);
-		margin-left: 0.5rem;
+		margin: 0.75rem 0 0.2rem 0;
 		line-height: normal;
 	}
 
