chore: remove old code

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,5 +45,6 @@
 @import "components/link_btn_lrg_component";
 @import "components/max_width_component";
 @import "components/neighbourhood_home_card_component";
+@import "components/partner_preview_component.scss";
 @import "components/partnership_card_component";
 @import "components/pull_quote_component";
