fix: tests and final tidyup

--- a/app/components/partner_filter_component/partner_filter_component.html.erb
+++ b/app/components/partner_filter_component/partner_filter_component.html.erb
@@ -5,7 +5,7 @@
                       turbo_frame: "partner_previews" }, 
               class: 'filters__form' do %>
   <div class ="breadcrumb__element breadcrumb__element--last">
-
+    <span class="filters__link">Filter by:</span>
     <%# Category filter %>
     <% if show_category_filter? %>
       <div class="breadcrumb__filters filters">
