--- a/app/components/partner_filter_component/partner_filter_component.html.erb
+++ b/app/components/partner_filter_component/partner_filter_component.html.erb
@@ -1,8 +1,7 @@
 <%= form_with url: partners_path, 
               method: :get, 
               data: { controller: "partner-filter-component", 
-                      "partner-filter-component-target": "form", 
-                      turbo_frame: "partner_previews" }, 
+                      "partner-filter-component-target": "form" }, 
               class: 'filters__form' do %>
   <div class ="breadcrumb__element breadcrumb__element--last">
     <span class="filters__link">Filter by:</span>
