--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -14,11 +14,13 @@
 
   <hr>
 
-  <ul class="partners reset two-col" id="partners">
-    <% @partners.each do |partner| %>
-      <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
-    <% end %>
-  </ul>
+  <%= turbo_frame_tag "partner_previews" do %>
+    <ul class="partners reset two-col" id="partners">
+      <% @partners.each do |partner| %>
+        <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
+      <% end %>
+    </ul>
+  <% end %>
 </div>
 
 <div id="map">
