--- a/app/components/partner_filter_component/partner_filter_component.html.erb
+++ b/app/components/partner_filter_component/partner_filter_component.html.erb
@@ -1,8 +1,10 @@
+<%# turbo_frame_tag "partners_filter" do %>
 <%= form_with url: partners_path, 
               method: :get, 
               data: { controller: "partner-filter-component", 
                       "partner-filter-component-target": "form",
-                      "turbo-frame": "partner_previews"}, 
+                      # "turbo-frame": "partner_previews"
+                    }, 
               class: 'filters__form' do %>
   <div class ="breadcrumb__element breadcrumb__element--last">
     <span class="filters__link">Filter by:</span>
@@ -66,3 +68,4 @@
 
   </div>
 <% end %>
+<%# end %>
