--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -14,13 +14,13 @@
 
   <hr>
 
-  <%= turbo_frame_tag "partner_previews" do %>
+  <%# turbo_frame_tag "partner_previews" do %>
     <ul class="partners reset two-col" id="partners">
       <% @partners.each do |partner| %>
         <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
       <% end %>
     </ul>
-  <% end %>
+  <%# end %>
 </div>
 
 <div id="map">
