feat: Use turbolinks

--- a/app/assets/stylesheets/components/filters.scss
+++ b/app/assets/stylesheets/components/filters.scss
@@ -5,7 +5,10 @@
 		position: relative;
 	}
 
-	&__toggle {
+	&__toggle button {
+		border: none;
+		background: none;
+		font-family: $sans-serif;
 	}
 
 	&__label {
