--- a/app/components/partner_preview_component/partner_preview_component.html.erb
+++ b/app/components/partner_preview_component/partner_preview_component.html.erb
@@ -1,6 +1,6 @@
 <li class="preview">
   <div class="preview__header">
-    <h3><%= link_to @partner.name, @partner %></h3>
+    <h3><%= link_to @partner.name, @partner, data: { "turbo-frame": "_top" } %></h3>
     <% if show_neighbourhood? %>
       <div class="neighbourhood <%= primary_neighbourhood? ? 'neighbourhood--primary' : 'neighbourhood--secondary' %> preview__neighbourhood">
         <span><%= neighbourhood_name %></span>
