--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -19,6 +19,7 @@
 
     <div class="g g--partner">
       <div class="gi gi__3-5">
+                    <%= @json %>
         <% if @partner.summary %>
           <div class="p--big">
             <%= content_tag(:p, @partner.summary) %>
