--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -3,7 +3,7 @@
 <% content_for :description, @site.og_description %>
 
 <%= render_component "hero", title: 'Our Partners', subtitle: @site.tagline %>
-
+<%= turbo_frame_tag "partner_previews" do %>
 <div class="c c--lg-space-after">
   <%= render_component "breadcrumb", trail: [['Partners', partners_path]], site_name: @site.name do %>
     <%= render PartnerFilterComponent.new(partners: @partners, 
@@ -14,15 +14,15 @@
 
   <hr>
 
-  <%# turbo_frame_tag "partner_previews" do %>
+  
     <ul class="partners reset two-col" id="partners">
       <% @partners.each do |partner| %>
         <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
       <% end %>
     </ul>
-  <%# end %>
+ 
 </div>
-
+ <% end %>
 <div id="map">
   <%= render 'shared/map', points: @map, site: @current_site.slug %>
 </div>
