--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,7 @@
 @import "components/case_study_component";
 @import "components/container_with_header_component";
 @import "components/featured_partnerships_component";
+@import "components/filters";
 @import "components/four_col_grid_component";
 @import "components/full_width_action_component";
 @import "components/hero_section_component";
@@ -44,5 +45,6 @@
 @import "components/link_btn_lrg_component";
 @import "components/max_width_component";
 @import "components/neighbourhood_home_card_component";
+@import "components/partner_preview_component.scss";
 @import "components/partnership_card_component";
 @import "components/pull_quote_component";
