--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -3,26 +3,26 @@
 <% content_for :description, @site.og_description %>
 
 <%= render_component "hero", title: 'Our Partners', subtitle: @site.tagline %>
-
+<%= turbo_frame_tag "partner_previews" do %>
 <div class="c c--lg-space-after">
   <%= render_component "breadcrumb", trail: [['Partners', partners_path]], site_name: @site.name do %>
-    <%= @filters.render_filters(self) %>
+    <%= render PartnerFilterComponent.new(partners: @partners, 
+                                          site: @site,
+                                          selected_category: @selected_category, 
+                                          selected_neighbourhood: @selected_neighbourhood) %>
   <% end %>
 
   <hr>
-  <ul class="partners reset two-col" id="partners" >
-    <% @partners.each do |partner| %>
-      <%= render_component("place_partner_preview",
-                           previewee: partner,
-                           primary_neighbourhood: @primary_neighbourhood,
-                           service_areas: partner.service_areas,
-                           show_neighbourhoods: @current_site.show_neighbourhoods?,
-                           neighbourhood_name: partner.neighbourhood_name_for_site(@current_site.badge_zoom_level)
-                           ) %>
-    <% end %>
-  </ul>
-</div>
 
+  
+    <ul class="partners reset two-col" id="partners">
+      <% @partners.each do |partner| %>
+        <%= render PartnerPreviewComponent.new(partner: partner, site: @site) %>
+      <% end %>
+    </ul>
+ 
+</div>
+ <% end %>
 <div id="map">
   <%= render 'shared/map', points: @map, site: @current_site.slug %>
 </div>
