--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,9 +29,9 @@
     <div class="gi gi__1-3">
       <h3 class="h4 udl">Event address</h3>
       <div class="small">
-        <%= render_component "address",
-            address: @event.address,
-	    raw_location: @event.raw_location_from_source
+        <%= render(
+          AddressComponent.new(address: @event.address, raw_location: @event.raw_location_from_source)
+        )
         %>
       </div>
     </div>
