--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -97,9 +97,10 @@
         <div class="gi gi__1-2">
           <h3 class="udl udl--fw allcaps h4">Address</h3>
           <div class="small">
-            <%= render_component "address",
-              address: place.address
-            %>
+        <%= render(
+          AddressComponent.new(address: place.address)
+        )
+        %>
           </div>
           <h3 class="udl udl--fw allcaps h4">Contact</h3>
           <div class="small">
