--- a/app/views/pages/community_groups.html.erb
+++ b/app/views/pages/community_groups.html.erb
@@ -17,7 +17,7 @@
       </div>
     <% end %>
 
-    <%= render_component "steps",
+    <%= render(StepsComponent.new(
       steps: [
         {
           id: 1,
@@ -40,6 +40,7 @@
           image_alt: "A community worker waving to a resident"
         }
       ]
+      ))
     %>
 
     <div class="card card--split card--plain impact">
