Move scss to assets directory

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,3 +48,4 @@
 @import "components/partner_preview_component.scss";
 @import "components/partnership_card_component";
 @import "components/pull_quote_component";
+@import "components/steps_component";
