--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -1,6 +1,6 @@
 <%# TODO: Only show Edit link for root users %>
 
-<%= render_component AdminIndexComponent.new(
+<%= render AdminIndexComponent.new(
   title: "Collections",
   model: :collections,
   column_titles: ['ID', 'Name', 'Description'],
