--- a/app/views/admin/supporters/index.html.erb
+++ b/app/views/admin/supporters/index.html.erb
@@ -1,4 +1,4 @@
-<%= render_component AdminIndexComponent.new(
+<%= render AdminIndexComponent.new(
   title: "Supporters",
   model: :supporters,
   column_titles: ['ID', 'Name', 'Logo', 'Global?'],
