--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,4 @@
 @import "components/partnership_card_component";
 @import "components/pull_quote_component";
 @import "components/steps_component";
+@import "components/breadcrumb_component";
