--- a/app/views/admin/collections/edit.html.erb
+++ b/app/views/admin/collections/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render_component "admin_edit", model: :collection, title: @collection.name %>
+<%= render AdminEdit.new(model: :collection, title: @collection.name) %>
