--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,3 +1,3 @@
 <% content_for :title do %>Editing <%= @article.title %><% end %>
 
-<%= render_component "admin_edit", model: :article, title: @article.title %>
+<%= render AdminEdit.new(model: :article, title: @article.title) %>
