--- a/app/views/admin/neighbourhoods/edit.html.erb
+++ b/app/views/admin/neighbourhoods/edit.html.erb
@@ -2,7 +2,5 @@
   const currentInfo = <%= @neighbourhood.to_json.html_safe %>
 </script>
 
-<%= render_component "admin_edit",
-        model: :neighbourhood, 
-        title: @neighbourhood.name 
-%>
+
+<%= render AdminEdit.new(model: :neighbourhood, title: @neighbourhood.name) %>
