--- a/app/views/admin/supporters/edit.html.erb
+++ b/app/views/admin/supporters/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render_component "admin_edit", model: :supporter, title: @supporter.name %>
+<%= render AdminEdit.new(model: :supporter, title: @supporter.name) %>
