--- a/app/views/admin/tags/edit.html.erb
+++ b/app/views/admin/tags/edit.html.erb
@@ -7,5 +7,5 @@
   <p>This tag is a <em>system tag</em> meaning that it cannot be edited by non-root admins.</p>
 
 <% else %>
-  <%= render_component "admin_edit", model: :tag, title: @tag.name %>
+  <%= render AdminEdit.new(model: :tag, title: @tag.name) %>
 <% end %>
