chore: add optional params to contact details component

--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -31,15 +31,7 @@
         <% end %>
 
         <h3 class="udl udl--fw allcaps h4">Get in touch</h3>
-        <%= render ContactDetails.new(
-          name: @partner.name,
-          email: @partner.public_email,
-          phone: @partner.public_phone,
-          url: @partner.url,
-          twitter_handle: @partner.twitter_handle,
-          instagram_handle: @partner.instagram_handle,
-          facebook_link: @partner.facebook_link,
-          is_valid_phone: @partner.valid_public_phone?)
+        <%= render ContactDetails.new(partner: @partner)
         %>
 
         <h3 class="udl udl--fw allcaps h4">Address</h3>
@@ -101,6 +93,7 @@
           <h3 class="udl udl--fw allcaps h4">Contact</h3>
           <div class="small">
             <%= render ContactDetails.new(
+              @partner,
               email: place.public_email,
               phone: place.public_phone,
               url: place.url,
