chore: fix tests

--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -96,8 +96,7 @@
               partner: @partner,
               email: place.public_email,
               phone: place.public_phone,
-              url: place.url,
-              is_valid_phone: @partner.valid_public_phone?
+              url: place.url
               )
             %>
           </div>
