chore: view component for admin edit & contact details (#2719)
* chore: convert admin_edit and contact_details to viewcomponent

* chore: move components to root, move css add to application css

* chore: add optional params to contact details component

* chore: minor fix to way partner is passed

* chore: fix tests

* fix: alphabetize application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 // view_component stylessheets
 
 @import "components/case_study_component";
+@import "components/contact_details_component";
 @import "components/container_with_header_component";
 @import "components/featured_partnerships_component";
 @import "components/filters";
