--- a/app/views/admin/sites/new.html.erb
+++ b/app/views/admin/sites/new.html.erb
@@ -1,3 +1,3 @@
 <% content_for :title do %>New Site<% end %>
 
-<%= render_component "admin_new", model: :site %>
+<%= render(AdminNew.new(:site)) %>
