--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -23,10 +23,10 @@
           </div>
         </nav>
         <main role="main" class="col-md-9 mt-3 ml-sm-auto col-lg-10 px-4">
-          <%= render_component "admin_flash" %>
+          <%= render(AdminFlash.new()) %>
           <%= yield %>
 
-          <% if Rails.env.development? %>
+          <% if Rails.env.development? %>r
             <div class="text-monospace text-muted mt-5">
               <%= debug(params) %>
               <%# console %>
