--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <%= render_component "navigation", navigation: @navigation %>
       </header>
       <main>
-        <%= render_component "admin_flash" %>
+        <%= render(AdminFlash.new()) %>
         <%= yield %>
       </main>
       <footer>
